Keep deterministic priority tests Java 8 compatible